[package]
name = "url-shortener"
version = "0.1.0"
authors = ["Amirmoghi3"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.1"
mongodb="1.1.1"
bson = "1.1.0"
lazy_static = "1.4.0"
serde = "1.0.105"
serde_json = "1.0.59"
envfile = "0.2.1"
chrono = "0.4.11"
rust-crypto = "0.2.36"
uuid = { version = "0.8", features = ["serde", "v4"] }
futures = "0.3.4"
rand = "0.7.3"
dotenv = "0.15.0"
actix-cors = "0.5.3"
[profile.dev]
incremental =true
opt-level = 1 

[profile.release]
opt-level = 3
debug = false
debug-assertions = false
overflow-checks = false
lto = false
panic = 'unwind'
codegen-units = 16
rpath = false
incremental =true