[package]
name = "url-shortener"
version = "0.1.0"
authors = ["Amirmoghi3"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "3.3.1"
mongodb={ version = "1.1.1", default-features = false, features = ["async-std-runtime"] }
bson = "1.1.0"
lazy_static = "1.4.0"
serde = "1.0.105"
serde_json = "1.0.59"
envfile = "0.2.1"
chrono = "0.4.11"
rust-crypto = "0.2.36"
futures = "0.3.4"
rand = "0.7.3"
dotenv = "0.15.0"
actix-cors = "0.5.3"
env_logger = "0.8.2"
regex ="1"
url="2.2.0"
